--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
       <link href="css/styles.css" rel="stylesheet" type="text/css">
       <script src="js/jquery-3.3.1.js"></script>
       <script src="js/scripts.js"></script>
-
     <title>Vaccation Suggester</title>
   </head>
 
-  <body>
+  <body class="main">
       <h1>Vaccation Suggester</h1>
       <p>Please answer any of the following questions about yourself to win a vaccation destination of your choice</p>
 
@@ -19,7 +18,7 @@
 
             <div id="name">
               <label for="yournames">Your names:</label>
-              <input type="text" id="yournames" value="name"> <br>
+              <input type="text" id="yournames" value=""> <br>
 
             </div>
 
@@ -77,8 +76,6 @@
             <div class="button">
               <button type="submit" name="submit">Submit</button>
             </div>
-
-  <script src="js/scripts.js"></script>
 
   </body>
 </html>
